<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical"
    android:padding="24dp">


    <TextView
        android:id="@+id/eth_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="4dp"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="#303F9F"
        android:textStyle="bold" />

    <LinearLayout
            android:id="@+id/eth_calc_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1"
            android:background="@color/eth_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eth_from_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/from_eth"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/eth_field"
                    android:layout_width="128dp"
                    android:layout_height="42dp"
                    android:hint="@string/eth_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="12" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/eth_to_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/to"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/eth_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dec_value"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/eth_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"

                    android:prompt="@string/spinner_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/eth_buttons"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="48dp"
                    android:background="@drawable/eth_rounded_border">

                    <Button
                        android:id="@+id/eth_convert_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="ethConvert"
                        android:text="@string/convert" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/btc_rounded_border">

                    <Button
                        android:id="@+id/eth_clear_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="clearField"
                        android:text="@string/clear" />

                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginBottom="16dp"
            android:background="#303F9F" />


    <TextView
        android:id="@+id/btc_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="4dp"
        android:textAllCaps="false"
        android:textAppearance="?android:textAppearanceMedium"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="bold" />


    <LinearLayout
            android:id="@+id/btc_calc_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@color/btc_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btc_from_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/from_btc"
                    android:textAllCaps="false"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/btc_field"
                    android:layout_width="128dp"
                    android:layout_height="42dp"
                    android:hint="@string/btc_hint"
                    android:inputType="numberDecimal"
                    android:maxLength="12" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/btc_to_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginLeft="4dp"
                    android:layout_marginRight="8dp"
                    android:layout_marginStart="4dp"
                    android:text="@string/to"
                    android:textAllCaps="true"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorPrimary"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/btc_result"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dec_value"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:textColor="@color/colorAccent"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/btc_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="42dp"
                    android:prompt="@string/spinner_title" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/btc_buttons"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginLeft="48dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginStart="48dp"
                    android:background="@drawable/eth_rounded_border">

                    <Button
                        android:id="@+id/btc_convert_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="btcConvert"
                        android:text="@string/convert" />

                </FrameLayout>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/btc_rounded_border">

                    <Button
                        android:id="@+id/btc_clear_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="?android:attr/selectableItemBackground"
                        android:onClick="clearField"
                        android:text="@string/clear" />

                </FrameLayout>
            </LinearLayout>
        </LinearLayout>

</LinearLayout>